--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,3 @@
-@import 'variables';
-
 *,
 *::after,
 *::before{
@@ -7,6 +5,12 @@
   padding:0;
   box-sizing: border-box;
 }
+
+$bp-largest:75em; //1200px
+$bp-large:68.75em; //1100px
+$bp-medium:48.25em; //800px
+$bp-small:37.5em; // 600px
+$bp-smallest:31.25em; // 500px
 
 
 html{
@@ -22,9 +26,8 @@ html{
 body{
   font-family: 'Barlow Condensed', sans-serif;
   font-weight: 400;
-  line-height: 1.5;
-  font-size: 1.8rem;
-
+  overflow-x: hidden;
+  
  
 }
 
