--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,349 +1,289 @@
-.nav {
+// Navigation
+.nav{
+
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 16vh;
-  width: 130%;
-  font-size: 1.8rem;
-  text-transform: uppercase;
-  font-family: 'Barlow', sans-serif;
+&-img{
 
-
-
-  @media only screen and(max-width:$bp-mentor) {
-
-    width: 90%;
-  }
-
-
-  
-
-
-  &-list {
-    display: flex;
-
-
-
+  width: 5rem;
+ 
+  @media only screen and(max-width:$bp-medium){
     
-
-
-    @media only screen and(max-width:$bp-medium) {
-
-      flex-direction: column;
-      margin-top: 70%;
-      margin-left: auto;
-      margin-right: auto;
-      z-index: 10;
-      background: white;
-      width: 90%;
-      padding: 2rem;
-      font-size: 2.2rem;
-      text-align: center;
-      box-shadow: 1px 1px 10px $grayishBlue;
-      display: none;
-     
-
-
-    }
-
-    @media only screen and(max-width:$bp-smallest){
-    
-      margin-top: 100%;
-    }
-
-    &--item {
-      margin-left: 6rem;
-      font-weight: bold;
-      color: $veryDark;
-
-      @media only screen and(max-width:$bp-medium) {
-
-        margin-bottom: 2rem;
-        margin-left: 0;
-
-        &:nth-of-type(4) {
-
-          display: none;
-        }
-
-        &:nth-of-type(3) {
-
-          border-bottom: 2px solid $grayishBlue;
-          border-width: 80%;
-          padding-bottom: 3rem;
-          margin-bottom: 2rem;
-         
-        }
-      }
-
-    }
-  }
-
-  &-link {
-    color: $veryDark;
-
-
-    @media only screen and(max-width:$bp-medium) {
-      font-weight: bold;
-
-    }
-  }
-
-  &-link:hover {
-    text-decoration: underline;
-  }
-
-  &-logo {
-    max-width: 3.2rem;
-    margin-left: 35rem;
-
-
-    @media only screen and(max-width:$bp-mentor) {
-
-      margin-left: 12rem;
-    }
-
-    @media only screen and(max-width:$bp-small) {
-
-      margin-left: 1rem;
-    }
+    transform: translateY(-28rem) translateX(-28.5rem);
+    width: 2.5rem;
+    display: block !important;
 
   }
 }
-.showcase {
-  height: calc(100vh - 160px);
+
+
+&-list{
   display: flex;
-  justify-content: center;
-  padding: 10rem;
-  align-items: center;
-
-  @media only screen and(max-width:$bp-medium) {
-
-    flex-direction: column;
-    padding: 1rem;
-
-  }
-
-  @media only screen and(max-width:$bp-small) {
-
-    padding: none;
-
-  }
-
-  &-flex {
-
-    @media only screen and(max-width:$bp-medium) {
-
-      display: flex;
-      align-items: center;
-
-    }
-
-  }
-  &-portrait {
-    width: 150%;
-    margin-right: -40rem;
-    position: relative;
-    order: 2;
-
-    @media only screen and(max-width:$bp-medium) {
-
-      order: -2;
-      margin-bottom: 8rem;
-      width: 100%;
-
-    }
-
-    @media only screen and(max-width:$bp-small) {
-
-
-      margin-right: 10rem;
-
-    }
-
-  }
-
-  &-preview {
-    margin-left: 2rem;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    color: $grayishBlue;
-
-    @media only screen and(max-width:$bp-small) {
-
-      margin-left: 1rem;
-
-    }
-  }
-
-  &-btn {
-    padding: 1rem 30px;
-    background: $red;
-    border-radius: 5px;
-    font-size: 2rem;
-
-
-    @media only screen and(max-width:$bp-smallest) {
-
-      padding: 0.6rem 15px;
-      font-size: 1.7rem;
-    }
-
-    a {
-      color: white;
-      text-transform: uppercase;
-    }
-  }
-
-  &-btn:hover {
-    background: $redHover;
-  }
-
-
-
-  &-title {
-
-    font-size: 7.7rem;
-    text-transform: uppercase;
-    line-height: 1.3;
-    font-weight: 700;
-    color: $veryDark;
-
-    @media only screen and(max-width:$bp-medium) {
-
-      font-size: 5rem;
-
-    }
-  }
-
-  &-img {
-    max-width: 140%;
-
-    @media only screen and(max-width:$bp-small) {
-
-      min-width: 180%;
-    }
-
-    @media only screen and(max-width:$bp-smallest) {
-
-      min-width: 200%;
-      margin: auto;
-    }
-
-  }
-
-  &-text {
-    font-size: 2.5rem;
-    color: #333;
-    width: 40%;
-    line-height: 1.3;
-
-    @media only screen and(max-width:$bp-medium) {
-
-      width: 100%;
-
-    }
-  }
-
-
-  &-span {
-    margin-left: 1rem;
-    letter-spacing: 0.45rem;
-    opacity: 0.7;
-    font-family: 'Barlow Condensed', sans-serif;
-    color: $grayishBlue;
-    font-size: 2.5rem !important;
-    font-weight: 400;
-  }
-
-  &-new {
-
-
-    border-radius: 15px;
-    text-transform: uppercase;
-    padding-left: 0.8rem;
-    padding-right: 0.8rem;
-    background: $veryDark;
-    font-weight: 700;
-    letter-spacing: 0.2rem;
-    font-size: 2.3rem;
-
-  }
-
-  &-info {
-
-    padding-left: 25rem;
-    order: 2;
-
-    @media only screen and(max-width:$bp-mentor) {
-
-      padding-left: 2rem;
-    }
-
-
-    span {
-      font-size: 2rem;
-      text-transform: uppercase;
-      font-weight: bold;
-
-
-    }
-
-    width: 80%;
-
-    @media only screen and(max-width:$bp-small) {
-      margin-top: 12rem;
-      width: 100%;
-    }
-
-    @media only screen and(max-width:$bp-smallest) {
-      margin-top: 15rem; 
-      margin-left: 2rem !important; 
-      width: 120%;
-    }
-  }
-}
-
-.shape {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 52%;
-  height: 50%;
-  background: $lightGrayish;
-  z-index: -1;
-  border-radius: 0 0 0 50px;
+  padding: 0;
 
 
   @media only screen and(max-width:$bp-medium){
-     width: 50%; 
-     height: 70%;
+    
+    flex-direction: column;
+    padding-left: 7rem;
+    padding-right: 7rem;
+    background: white;
+    width: calc(100vw - 40px);
+    text-align: center;
+    margin-top: 5rem;
+    box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.75);
+    display: none;
   }
-  @media only screen and(max-width:$bp-smallest){
-     height: 40%;
-     height: 64%;
+
+ 
+}
+
+
+
+&-list-item{
+  margin-left: 40px;
+
+  @media only screen and(max-width:$bp-medium){
+    
+         margin-bottom: 2.5rem;
+         margin-left: 0;
+
+         
   }
 }
 
-// toggle function 
+&-list-item:first-child{
 
-.show {
+
+  @media only screen and(max-width:$bp-medium){
+    
+    margin-top: 2.5rem;
+
+    
+}
+}
+
+&-list-item a{
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
+&-span{
+  color:white;
+  background: $veryDark;
+  border-radius: 20px;
+  padding: 0.4rem;
+  font-size: 2rem;
+  letter-spacing: 0.1rem;
+  margin-right: 1rem;
+}
+
+
+}
+
+// Main
+
+.show-list{
+  display: block;
+
+}
+
+
+h1{
+  font-size: 9rem;
+  color:$veryDark;
+  font-weight: bold;
+  text-transform: uppercase;
+
+
+  
+  @media only screen and(max-width:$bp-medium){
+    
+    font-size: 8rem;
+}
+}
+
+h3{
+  letter-spacing: 0.4rem;
+  text-transform: uppercase;
+  font-size: 2rem;
+  color:$grayishBlue;
+
+
+}
+
+h3:first-child{
+  margin-bottom: 2.5rem;
+}
+
+.div-btn{
+  display: flex;
+  align-items: center;
+  margin-top: 8rem;
+
+  @media only screen and(max-width:$bp-medium){
+    
+   
+    justify-content: center;
+ }
+ 
+}
+
+body::after{
+  content:'';
+  position: absolute;
+  top:0;
+  right: 0;
+  width: 50vw;
+  height: 50vh;
+  background: $lightGrayish;
+  z-index: -2;
+  border-bottom-left-radius: 90px;
+}
+
+
+.special{
+  margin-left: 80px;
+  color:$grayishBlue;
+  position: relative;
+
+
+  @media only screen and(max-width:$bp-medium){
+    
+    margin-left: 0;
+    margin-top: 40px;
+    padding-top: 1rem;
+   
+   
+   }
+
+}
+
+.special::before{
+  content:'';
+  position: absolute;
+  top:50%;
+  left:0;
+  height: 7px;
+  width: 7px;
+  opacity: 0.7;
+  transform: translate(-60px,-50%);
+  background: $grayishBlue;
+  border-radius: 50%;
+
+  @media only screen and(max-width:$bp-medium){
+    
+     position: absolute;
+     top:0;
+     left:0;
+     height: 1px;
+     transform: translateX(-45%);
+     width: calc(100vw - 100px);
+     background: $grayishBlue;
+     border-radius: 0;
+     background: $grayishBlue;
+   }
+}
+
+
+p{
+  font-size: 3.6rem;
+  color:$grayishBlue;
+  width: 55%;
+
+
+  @media only screen and(max-width:$bp-medium){
+    
+    width: 70%;
+    margin:3rem auto;
+}
+}
+
+
+.main-img{
+ 
+  transform: scale(2.3) translateX(25%);
+
+  @media only screen and(max-width:$bp-medium){
+    
+    transform: scale(1) translateX(0);
+    margin-bottom: 10rem;
+   
+  }
+}
+
+.container > div{
+  flex: 0.8;
+  height: 120%;
+
+
+  @media only screen and(max-width:$bp-medium){
+    
+    text-align: center;
+}
+
+}
+
+.container div:first-child {
+  flex:1.2;
+}
+
+.btn-main{
+  color:white;
+  font-size: 2rem;
+  background: $red;
+  border-radius: 10px;
+  text-transform: uppercase;
+  margin-right: 1rem;
+
+  
+
+}
+
+.btn-main:hover{
+  background: $redHover;
+  color: white;
+}
+
+main{
+  display: flex;
+  align-items: center;
+  height:calc(100vh - 210px);
+}
+
+.hamburger{
+   border:0;
+   outline: none;
+   display: none;
+   cursor: pointer;
+
+
+   @media only screen and(max-width:$bp-medium){
+    
+    display: block;
+    transform: translateX(250px);
+   
+    
+  }
+
+}
+
+.icon-hamburger{
+
   display: block;
 }
 
-.hide {
+.icon-close{
   display: none;
 }
 
-.hamburger {
+.show-nav .icon-close{
+  display: block;
+}
+
+.show-nav .icon-hamburger{
   display: none;
-
-  @media only screen and(max-width:$bp-medium) {
-
-    display: block;
-   
-  }
-
 }
