--- a/sass/_utility.scss
+++ b/sass/_utility.scss
@@ -1,542 +1,289 @@
-@import 'variables';
+// Navigation
+.nav{
+
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 
 
-/* BTN */
+&-img{
 
-.btn {
-  display: inline-block;
-  font-size: 18px;
-  color: #fff;
-  background: #333;
-  // padding: 0.9rem 1.4rem;
-  border: none;
-  cursor: pointer;
-  transition: all 0.6s;
-}
-
-#grey {
-  color: $grayishBlue;
-
-}
-
-#grey:hover {
-  color: $veryDark;
-}
-
-.btn-light {
-  background: #f4f4f4;
-  color: #777;
-}
-
-
-.btn-link {
-  background: none;
-  padding: 0;
-  margin: 0;
-}
-
-.btn-block {
-  display: block;
-  width: 100%;
-}
-
-.btn-sm {
-  font-size: 0.8rem;
-  padding: 0.3rem 1rem;
-  margin-right: 0.2rem;
-}
-
-.btn-success,
-.bg-success,
-.badge-success,
-.alert-success {
-  background: var(--success-color);
-  color: #fff;
-}
-
-.btn-dark,
-.bg-dark,
-.badge-dark,
-.alert-dark {
-  background: var(--dark-color);
-  color: #fff;
-}
-
-.btn-danger,
-.bg-danger,
-.badge-danger,
-.alert-danger {
-  background: var(--danger-color);
-  color: #fff;
-}
-
-
-/* center */
-.all-center {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: auto;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-
-/* Text */
-
-.text-center {
-  text-align: center;
-  margin-bottom: 1.5rem;
-}
-
-.text-primary {
-  color: #1ab6cf;
-  /*color:black;*/
-}
-
-.text-light {
-  color: white;
-}
-
-.text-bold {
-  font-weight: 700;
-}
-
-.l-heading {
-
-  font-size: 6rem;
-  margin-bottom: 1.5rem;
-}
-
-.m-heading {
-  font-size: 3.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.s-heading {
-  font-size: 2.7rem;
-  margin-bottom: 2.5rem;
-  letter-spacing: 0.1rem;
-}
-
-.lead {
-  font-size: 1.7rem;
-  margin-bottom: 1rem;
-}
-
-.border-doted {
-  border-bottom: rgb(214, 211, 211) dotted;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-  height: 2px;
-
-}
-
-/* Cards */
-.card {
-  padding: 1rem;
-  border: #ccc 1px dotted;
-  margin: 0.7rem 0;
-  margin-left: 2rem;
-
-
-  @media only screen and(max-width:$bp-medium) {
-
-    max-width: 70%;
-
+  width: 5rem;
+ 
+  @media only screen and(max-width:$bp-medium){
+    
+    transform: translateY(-28rem) translateX(-28.5rem);
+    width: 2.5rem;
+    display: block !important;
 
   }
 }
 
 
-
-
-/* Grid */
-.grid-2 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1rem;
-}
-
-.grid-3 {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
-}
-
-.grid-4 {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1rem;
-}
-
-
-
-/* Padding */
-
-
-.py-1 {
-  padding: 1.5rem 0;
-}
-
-.py-2 {
-  padding: 2.5rem 0;
-}
-
-.py-3 {
-  padding: 3.5rem 0;
-}
-
-.py-4 {
-  padding: 4.5rem 0;
-}
-
-.py-5 {
-  padding: 6rem 0;
-}
-
-
-.p-1 {
-  padding: 1rem;
-}
-
-.p-2 {
-  padding: 2rem;
-}
-
-.p-3 {
-  padding: 3rem;
-}
-
-.p-4 {
-  padding: 5rem;
-}
-
-.p-5 {
-  padding: 6rem;
-}
-
-/* Margin */
-
-.m-1 {
-  margin: 1rem;
-}
-
-.m-2 {
-  margin: 2rem;
-}
-
-.m-3 {
-  margin: 3rem;
-}
-
-.m-4 {
-  margin: 5.5rem;
-}
-
-.m-5 {
-  margin: 6.5rem;
-}
-
-
-
-
-/* Margin bottom */
-
-.mb-1 {
-  margin: 2rem 0;
-}
-
-.mb-2 {
-  margin: 3rem 0;
-}
-
-.mb-3 {
-  margin: 4rem 0;
-}
-
-.mb-4 {
-  margin: 5.5rem 0;
-}
-
-.mb-5 {
-  margin: 6.5rem 0;
-}
-
-/* Margin-top */
-.mt-1 {
-  margin: 2rem 0;
-}
-
-.mt-2 {
-  margin: 3rem 0;
-}
-
-.mt-3 {
-  margin: 4rem 0;
-}
-
-.mt-4 {
-  margin: 5.5rem 0;
-}
-
-.mt-5 {
-  margin: 6.5rem 0;
-}
-
-/* Margin-left */
-.ml-1 {
-  margin: 0 0 0 1rem;
-}
-
-.ml-2 {
-  margin: 0 0 0 2rem;
-}
-
-.ml-3 {
-  margin: 0 0 0 3rem;
-}
-
-.ml-4 {
-  margin: 0 0 0 4rem;
-}
-
-.ml-5 {
-  margin: 0 0 0 6rem;
-}
-
-/* Margin right */
-
-.mr-1 {
-  margin: 0 1rem 0 0;
-}
-
-.mr-2 {
-  margin: 0 2rem 0 0;
-}
-
-.mr-3 {
-  margin: 0 3rem 0 0;
-}
-
-.mr-4 {
-  margin: 0 4rem 0 0;
-}
-
-.mr-5 {
-  margin: 0 6rem 0 0;
-}
-
-
-/* Background */
-
-.bg-light {
-  background: #f4f4f4;
-  color: #333;
-}
-
-.bg-dark {
-  color: #fff;
-  background: #333;
-}
-
-.bg-primary {
-  color: #fff;
-  background: #4ea2f1;
-}
-
-/* IMG */
-
-.img-responsive {
-  display: inline-block;
-  max-width: 100%;
-  border-style: none;
-  cursor: pointer;
-
-}
-
-.round-img {
-  max-width: 25rem;
-  border-radius: 50%;
-}
-
-/* badge */
-
-.badge {
-  display: inline-block;
-  font-size: 0.8rem;
-  padding: 0.2rem 0.7rem;
-  text-align: center;
-  margin: 0.3rem;
-  background: var(--light-color);
-  color: #333;
-  border-radius: 5px;
-}
-
-.badge-secondary {
-
-  font-size: 1rem;
-  padding: 0.3rem;
-  text-align: center;
-  margin: 0.3rem;
-  background: #333;
-  color: white;
-}
-
-.badge-light {
-
-  font-size: 1rem;
-  padding: 0.3rem;
-  text-align: center;
-  margin: 0.3rem;
-  background: #f4f4f4;
-  color: #333;
-}
-
-.bg-overlay {
-
-  background: linear-gradient(to right bottom, rgba(51, 51, 51, 0.801),
-      rgba(68, 68, 68, 0.795)),
-    url(../img/showcase.jpg) no-repeat center center/cover;
-  background-attachment: fixed;
-}
-
-
-/* container */
-
-.container {
-  max-width: $grid-width;
-  padding: 0 2rem;
-  margin: auto;
-  overflow: hidden;
-
-
-}
-
-.form-group {
-  margin: 1.2rem 0;
-}
-
-
-.form-control {
-  outline: none;
-  border: 1px solid lightblue;
-  padding: 1rem;
-  display: block;
-  margin-top: 1.8rem;
-  width: 100%;
-
-}
-
-/* css reset */
-/* inputs */
-
-input[type='text'],
-input[type='email'],
-input[type='password'],
-input[type='date'],
-select,
-textarea {
-  display: block;
-  width: 100%;
-  padding: 0.4rem;
-  font-size: 1.2rem;
-  border: 1px solid #ccc;
-}
-
-input[type='submit'],
-button {
-  font: inherit;
-}
-
-/* table */
-
-table th,
-table td {
-  padding: 1rem;
-  text-align: left;
-}
-
-table th {
-  background: var(--light-color);
-}
-
-/* end of css reset */
-
-/* Alert */
-
-.alert {
-  max-width: 100%;
-  height: 5rem;
-  background: rgb(255, 85, 85);
-  color: white;
-  margin-left: 7rem;
-
-  opacity: 0.9;
-  ;
-
-}
-
-/* Navbar */
-.navbar {
+&-list{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.7rem 2rem;
-  z-index: 1;
-  width: 100%;
-  opacity: 0.9;
-  margin-bottom: 1rem;
-}
+  padding: 0;
 
-.navbar ul {
-  display: flex;
-}
 
-.navbar a {
-  color: #fff;
-  padding: 0.45rem;
-  margin: 0 0.25rem;
-}
-
-.navbar a:hover {
-  color: var(--light-color);
-}
-
-/* Mobile Styles */
-@media (max-width: 700px) {
-  .hide-sm {
+  @media only screen and(max-width:$bp-medium){
+    
+    flex-direction: column;
+    padding-left: 7rem;
+    padding-right: 7rem;
+    background: white;
+    width: calc(100vw - 40px);
+    text-align: center;
+    margin-top: 5rem;
+    box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.75);
     display: none;
   }
 
-  .grid-2,
-  .grid-3,
-  .grid-4 {
-    grid-template-columns: 1fr;
-  }
+ 
+}
 
-  /* Text Styles */
-  .x-large {
-    font-size: 3rem;
-  }
 
-  .large {
-    font-size: 2rem;
-  }
 
-  .lead {
-    font-size: 1rem;
-  }
+&-list-item{
+  margin-left: 40px;
 
-  /* Navbar */
-  .navbar {
-    display: block;
-    text-align: center;
-  }
+  @media only screen and(max-width:$bp-medium){
+    
+         margin-bottom: 2.5rem;
+         margin-left: 0;
 
-  .navbar ul {
-    text-align: center;
+         
+  }
+}
+
+&-list-item:first-child{
+
+
+  @media only screen and(max-width:$bp-medium){
+    
+    margin-top: 2.5rem;
+
+    
+}
+}
+
+&-list-item a{
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
+&-span{
+  color:white;
+  background: $veryDark;
+  border-radius: 20px;
+  padding: 0.4rem;
+  font-size: 2rem;
+  letter-spacing: 0.1rem;
+  margin-right: 1rem;
+}
+
+
+}
+
+// Main
+
+.show-list{
+  display: block;
+
+}
+
+
+h1{
+  font-size: 9rem;
+  color:$veryDark;
+  font-weight: bold;
+  text-transform: uppercase;
+
+
+  
+  @media only screen and(max-width:$bp-medium){
+    
+    font-size: 8rem;
+}
+}
+
+h3{
+  letter-spacing: 0.4rem;
+  text-transform: uppercase;
+  font-size: 2rem;
+  color:$grayishBlue;
+
+
+}
+
+h3:first-child{
+  margin-bottom: 2.5rem;
+}
+
+.div-btn{
+  display: flex;
+  align-items: center;
+  margin-top: 8rem;
+
+  @media only screen and(max-width:$bp-medium){
+    
+   
     justify-content: center;
+ }
+ 
+}
+
+body::after{
+  content:'';
+  position: absolute;
+  top:0;
+  right: 0;
+  width: 50vw;
+  height: 50vh;
+  background: $lightGrayish;
+  z-index: -2;
+  border-bottom-left-radius: 90px;
+}
+
+
+.special{
+  margin-left: 80px;
+  color:$grayishBlue;
+  position: relative;
+
+
+  @media only screen and(max-width:$bp-medium){
+    
+    margin-left: 0;
+    margin-top: 40px;
+    padding-top: 1rem;
+   
+   
+   }
+
+}
+
+.special::before{
+  content:'';
+  position: absolute;
+  top:50%;
+  left:0;
+  height: 7px;
+  width: 7px;
+  opacity: 0.7;
+  transform: translate(-60px,-50%);
+  background: $grayishBlue;
+  border-radius: 50%;
+
+  @media only screen and(max-width:$bp-medium){
+    
+     position: absolute;
+     top:0;
+     left:0;
+     height: 1px;
+     transform: translateX(-45%);
+     width: calc(100vw - 100px);
+     background: $grayishBlue;
+     border-radius: 0;
+     background: $grayishBlue;
+   }
+}
+
+
+p{
+  font-size: 3.6rem;
+  color:$grayishBlue;
+  width: 55%;
+
+
+  @media only screen and(max-width:$bp-medium){
+    
+    width: 70%;
+    margin:3rem auto;
+}
+}
+
+
+.main-img{
+ 
+  transform: scale(2.3) translateX(25%);
+
+  @media only screen and(max-width:$bp-medium){
+    
+    transform: scale(1) translateX(0);
+    margin-bottom: 10rem;
+   
   }
+}
+
+.container > div{
+  flex: 0.8;
+  height: 120%;
+
+
+  @media only screen and(max-width:$bp-medium){
+    
+    text-align: center;
+}
+
+}
+
+.container div:first-child {
+  flex:1.2;
+}
+
+.btn-main{
+  color:white;
+  font-size: 2rem;
+  background: $red;
+  border-radius: 10px;
+  text-transform: uppercase;
+  margin-right: 1rem;
+
+  
+
+}
+
+.btn-main:hover{
+  background: $redHover;
+  color: white;
+}
+
+main{
+  display: flex;
+  align-items: center;
+  height:calc(100vh - 210px);
+}
+
+.hamburger{
+   border:0;
+   outline: none;
+   display: none;
+   cursor: pointer;
+
+
+   @media only screen and(max-width:$bp-medium){
+    
+    display: block;
+    transform: translateX(250px);
+   
+    
+  }
+
+}
+
+.icon-hamburger{
+
+  display: block;
+}
+
+.icon-close{
+  display: none;
+}
+
+.show-nav .icon-close{
+  display: block;
+}
+
+.show-nav .icon-hamburger{
+  display: none;
 }
